# kvm-rust

./: Cargo.toml  Cross.toml  ppc64.Containerfile
containerscripts/: common.sh  dropbear.sh  lib.sh  linux-image.sh  qemu.sh
cross/: armv7hf.Containerfile  armv7hf.sh  powerpc64.sh  ppc64.Containerfile
cross/debian-scripts/: linux-image.sh  qemu.sh
migration/: Cargo.toml
migration/src/: identities.rs  lib.rs  m20221020_174326_host_table.rs  m20221020_181400_running_vms_table.rs  m20221022_213306_vdev_vm_uuid_table.rs  m20221022_213722_vdevs_table.rs  m20221022_214219_vdisks_table.rs  m20221022_214350_vdisks_vm_uuid_table.rs  m20221022_214851_vm_templates_table.rs  m20221022_222629_vms_table.rs
src/: kvm.rs  kvm_consts.rs  logging.rs  main.rs  parameters.rs
src/logging/: has_kvm_ver.rs
