[package]
name = "kvm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.2"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros"  ] }
futures = "0.3"
async-std = "1.12.0"
