[package]
name = "kvm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.2"
sea-orm = { version = "0.9.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros"  ] }
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"]}
sea-orm-migration = { version = "0.9.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls"]}