[package]
name = "kvm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#![feature(stmt_expr_attributes)]
nix = "0.26.1"
sea-orm = { version = "0.10.2", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros"  ] }
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"]}
sea-orm-migration = { version = "0.10.2", features = [ "sqlx-mysql", "runtime-tokio-native-tls"]}
regex = "^1.0.0"
lazy_static = "1.4.0"
exitcode = "1.1.2"

[profile.release]
strip = true
lto = true
incremental = true
overflow-checks = true

[profile.dev]
opt-level = 0
incremental = true
